--- a/pages/login.html
+++ b/pages/login.html
@@ -32,7 +32,7 @@
                 <form
                     class="d-flex flex-column align-items-start justify-content-center"
                 >
-                    <h2 class="fw-bold">¡Bienvenid@!</h2>
+                    <h1 class="h2 fw-bold">¡Bienvenid@!</h1>
                     <p class="pb-3">Por favor inicia sesión para continuar</p>
                     <input
                         class="form-control my-2"
