--- a/pages/register.html
+++ b/pages/register.html
@@ -28,7 +28,7 @@
                 <form
                     class="d-flex flex-column align-items-start justify-content-center"
                 >
-                    <h2 class="fw-bold">Cuenta nueva</h2>
+                    <h1 class="h2 fw-bold">Cuenta nueva</h1>
                     <p class="pb-3">
                         Regístrate y disfruta de todos los beneficios de Movie
                         Dump
