:sparkles: Added platform logos

--- a/index.html
+++ b/index.html
@@ -78,23 +78,23 @@
             </header>
 
             <section class="d-flex justify-content-between align-items-center">
-                <button class="btn-platform btn px-4 py-3 rounded-4">
-                    Max
+                <button class="btn-platform btn rounded-4">
+                    <img src="assets/img/HBOMax-Logo.png" alt="" width="80">
                 </button>
-                <button class="btn-platform btn px-4 py-3 rounded-4">
-                    Netflix
+                <button class="btn-platform btn rounded-4">
+                    <img src="assets/img/Netflix-Logo.png" alt="" width="96">
                 </button>
-                <button class="btn-platform btn px-4 py-3 rounded-4">
-                    Disney
+                <button class="btn-platform btn rounded-4">
+                    <img src="assets/img/Disney-Logo.png" alt="" width="72">
                 </button>
-                <button class="btn-platform btn px-4 py-3 rounded-4">
-                    Prime
+                <button class="btn-platform btn rounded-4">
+                    <img src="assets/img/Prime-Logo.webp" alt="" width="96">
                 </button>
-                <button class="btn-platform btn px-4 py-3 rounded-4">
-                    Claro
+                <button class="btn-platform btn rounded-4">
+                    <img src="assets/img/Claro-Logo.png" alt="" width="112">
                 </button>
-                <button class="btn-platform btn px-4 py-3 rounded-4">
-                    Paramount
+                <button class="btn-platform btn rounded-4">
+                    <img src="assets/img/Paramount-Logo.webp" alt="" width="72">
                 </button>
             </section>
 
