--- a/pages/login.html
+++ b/pages/login.html
@@ -28,7 +28,7 @@
                     width="360"
                 />
             </section>
-            <section class="form-container dark-text px-4 py-5 rounded-end-5">
+            <section class="form-container px-4 py-5 rounded-end-5">
                 <form
                     class="d-flex flex-column align-items-start justify-content-center"
                 >
@@ -75,11 +75,11 @@
                 <div class="d-flex justify-content-between login-links w-100">
                     <a
                         href="register.html"
-                        class="dark-text links underline"
+                        class="links underline"
                     >
                         ¿No estás registrado?
                     </a>
-                    <a href="#" class="dark-text links underline" id="forgot">
+                    <a href="#" class="links underline" id="forgot">
                         Olvidé mi contraseña
                     </a>
                 </div>
