--- a/pages/register.html
+++ b/pages/register.html
@@ -24,7 +24,7 @@
             >
                 <img src="../assets/img/undraw_playlist.svg" alt="" width="360" />
             </section>
-            <section class="form-container dark-text px-4 py-5 rounded-end-5">
+            <section class="form-container px-4 py-5 rounded-end-5">
                 <form
                     class="d-flex flex-column align-items-start justify-content-center"
                 >
@@ -72,7 +72,7 @@
                 </form>
 
                 <div class="d-flex justify-content-end login-links w-100">
-                    <a href="login.html" class="dark-text links underline">
+                    <a href="login.html" class="links underline">
                         ¿Ya tienes una cuenta?
                     </a>
                 </div>
