--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
     <body class="d-flex">
-        <div class="vh-100 p-4 position-sticky top-0">
+        <div class="vh-100 p-4 position-sticky top-0 d-none d-md-block outline">
             <nav
                 class="sidebar navbar d-flex flex-column justify-content-between align-items-center h-100 px-3 pt-4 rounded-4"
             >
@@ -38,30 +38,30 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="sidebar-icon p-2 rounded-3">
+                        <a href="pages/login.html" class="sidebar-icon p-2 rounded-3">
                             <i class="fs-5 fa-solid fa-user"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="sidebar-icon p-2 rounded-3">
+                        <a href="pages/contact.html" class="sidebar-icon p-2 rounded-3">
                             <i class="fs-5 fa-solid fa-paper-plane"></i>
                         </a>
                     </li>
                 </ul>
-                <a href="#" class="sidebar-icon p-2 rounded-3">
+                <a id="signout" href="#" class="sidebar-icon p-2 rounded-3">
                     <i class="fs-5 fa-solid fa-right-from-bracket"></i>
                 </a>
             </nav>
         </div>
 
-        <main class="d-flex flex-column gap-3 py-4 pe-4">
+        <main class="d-flex flex-column gap-3 p-3 ps-md-0 pe-md-4 py-md-4">
             <header class="d-flex justify-content-between align-items-center">
                 <a href="#" class="d-flex align-items-center">
                     <img src="assets/img/magic-ball.webp" alt="" width="80" />
                     <h1 class="fw-bold mx-2 my-0">Movie Dump</h1>
                 </a>
 
-                <div id="login-panel" class="d-flex gap-4">
+                <div id="login-panel" class="d-none d-md-flex gap-4">
                     <button
                         id="login-redirect"
                         class="btn-account btn-login btn px-5 py-2 rounded-4"
@@ -77,43 +77,116 @@
                 </div>
             </header>
 
-            <section class="d-flex justify-content-between align-items-center">
-                <button class="btn-platform btn rounded-4">
-                    <img src="assets/img/HBOMax-Logo.png" alt="" width="80">
-                </button>
-                <button class="btn-platform btn rounded-4">
-                    <img src="assets/img/Netflix-Logo.png" alt="" width="96">
-                </button>
-                <button class="btn-platform btn rounded-4">
-                    <img src="assets/img/Disney-Logo.png" alt="" width="72">
-                </button>
-                <button class="btn-platform btn rounded-4">
-                    <img src="assets/img/Prime-Logo.webp" alt="" width="96">
-                </button>
-                <button class="btn-platform btn rounded-4">
-                    <img src="assets/img/Claro-Logo.png" alt="" width="112">
-                </button>
-                <button class="btn-platform btn rounded-4">
-                    <img src="assets/img/Paramount-Logo.webp" alt="" width="72">
-                </button>
+            <section
+                class="platforms d-block overflow-x-hidden position-relative"
+            >
+                <div
+                    class="arrow position-absolute top-0 h-100 align-items-center"
+                >
+                    <i
+                        id="left"
+                        class="fa-solid fa-angle-left fs-5 d-flex justify-content-center align-items-center rounded-5"
+                    ></i>
+                </div>
+                <section class="buttons d-flex gap-3 overflow-x-hidden">
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/HBOMax-Logo.png"
+                            alt=""
+                            width="80"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Netflix-Logo.png"
+                            alt=""
+                            width="96"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Disney-Logo.png"
+                            alt=""
+                            width="72"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Prime-Logo.webp"
+                            alt=""
+                            width="96"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Claro-Logo.png"
+                            alt=""
+                            width="112"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Paramount-Logo.webp"
+                            alt=""
+                            width="72"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/HBOMax-Logo.png"
+                            alt=""
+                            width="80"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Netflix-Logo.png"
+                            alt=""
+                            width="96"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Disney-Logo.png"
+                            alt=""
+                            width="72"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Prime-Logo.webp"
+                            alt=""
+                            width="96"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Claro-Logo.png"
+                            alt=""
+                            width="112"
+                        />
+                    </button>
+                    <button class="px-0 d-block btn-platform btn rounded-4">
+                        <img
+                            src="assets/img/Paramount-Logo.webp"
+                            alt=""
+                            width="72"
+                        />
+                    </button>
+                </section>
+                <div
+                    class="arrow position-absolute top-0 h-100 justify-content-end align-items-center"
+                >
+                    <i
+                        id="right"
+                        class="fa-solid fa-angle-right fs-5 d-flex justify-content-center align-items-center rounded-5"
+                    ></i>
+                </div>
             </section>
 
-            <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner" data-bs-visible="3">
-                  <div class="carousel-item active">
-                    <img src="assets/img/magic-ball.webp" class=" w-25" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/img/magic-ball-lines.webp" class=" w-25" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="assets/img/magic-ball.webp" class=" w-25" alt="...">
-                  </div>
-                </div>
-                
-              </div> -->
-
-            <section class="d-flex justify-content-between row">
+            <section
+                class="d-flex justify-content-between row flex-column flex-md-row"
+            >
                 <article class="col-5">
                     <h2 class="fw-bold fs-3 mb-3">Destacado</h2>
                     <div class="ratio ratio-16x9">
@@ -144,32 +217,32 @@
                     <article>
                         <h3 class="fw-bold fs-4 mt-3 mb-2">Novedades</h3>
                         <div
-                            class="d-flex justify-content-between align-items-center"
+                            class="d-flex flex-column flex-md-row justify-content-between align-items-center "
                         >
                             <img
                                 src="assets/img/wolverine.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                             <img
                                 src="assets/img/annabelle.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                             <img
                                 src="assets/img/guardians-of-galaxy.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                             <img
                                 src="assets/img/killbill.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                             <img
                                 src="assets/img/bohemian-rhapsody.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                         </div>
                     </article>
@@ -177,42 +250,42 @@
                     <article>
                         <h3 class="fw-bold fs-4 mt-3 mb-2">Recomendados</h3>
                         <div
-                            class="d-flex justify-content-between align-items-center"
+                            class="d-flex flex-column flex-md-row justify-content-between align-items-center"
                         >
                             <img
                                 src="assets/img/wolverine.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                             <img
                                 src="assets/img/annabelle.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                             <img
                                 src="assets/img/guardians-of-galaxy.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                             <img
                                 src="assets/img/killbill.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                             <img
                                 src="assets/img/bohemian-rhapsody.webp"
                                 alt=""
-                                class="img small rounded-4"
+                                class="my-4 my-md-0 img small rounded-4"
                             />
                         </div>
                     </article>
                 </article>
             </section>
 
-            <section class="family">
+            <section class="family d-none d-md-block">
                 <h2 class="fw-bold fs-3 mb-3">Familia</h2>
                 <article
-                    class="d-flex justify-content-between align-items-center"
+                    class="change d-flex justify-content-between align-items-center"
                 >
                     <img
                         src="assets/img/wolverine.webp"
@@ -247,10 +320,10 @@
                 </article>
             </section>
 
-            <section class="comedy">
+            <section class="comedy d-none d-md-block">
                 <h2 class="fw-bold fs-3 mb-3">Comedia</h2>
                 <article
-                    class="d-flex justify-content-between align-items-center"
+                    class="change d-flex justify-content-between align-items-center"
                 >
                     <img
                         src="assets/img/wolverine.webp"
@@ -306,12 +379,18 @@
                         <a class="footer-link underline" href="#">Inicio</a>
                     </li>
                     <li>
-                        <a class="footer-link underline" href="pages/register.html">
+                        <a
+                            class="footer-link underline"
+                            href="pages/register.html"
+                        >
                             Registro
                         </a>
                     </li>
                     <li>
-                        <a class="footer-link underline" href="pages/contact.html">
+                        <a
+                            class="footer-link underline"
+                            href="pages/contact.html"
+                        >
                             Contacto
                         </a>
                     </li>
