:bug: Fixed responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <main class="d-flex flex-column gap-3 p-3 ps-md-0 pe-md-4 py-md-4">
-            <header class="d-flex justify-content-between align-items-center">
+            <header class="d-flex justify-content-center justify-content-md-between  align-items-center">
                 <a href="#" class="d-flex align-items-center">
                     <img src="assets/img/magic-ball.webp" alt="" width="80" />
                     <h1 class="fw-bold mx-2 my-0">Movie Dump</h1>
@@ -187,7 +187,7 @@
             <section
                 class="d-flex justify-content-between row flex-column flex-md-row"
             >
-                <article class="col-5">
+                <article class="col col-md-5">
                     <h2 class="fw-bold fs-3 mb-3">Destacado</h2>
                     <div class="ratio ratio-16x9">
                         <img
@@ -213,7 +213,7 @@
                     </div>
                 </article>
 
-                <article class="col-7">
+                <article class="col col-md-7">
                     <article>
                         <h3 class="fw-bold fs-4 mt-3 mb-2">Novedades</h3>
                         <div
